[package]
name = "flary"
version = "0.1.0"
authors = ["Shaleen Jain <shaleen@jain.sh>"]
edition = "2018"
description = "A CLI for managing Domains and DNS records on cloudflare."
license = "MIT OR Apache-2.0"
repository = "https://github.com/shalzz/flary"
readme = "README.md"
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
async-std = "1.5.0"
async-trait = "0.1.24"
config = "0.10.1"
cloudflare = "0.6.4"
clap = "2.33.0"
crossterm = "0.14.1"
dirs = "1.0.5"
env_logger = "0.6.1"
log = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
tempfile = "3.1.0"
toml = "0.5.5"
