[package]
name = "flary"
version = "1.0.0"
authors = ["Shaleen Jain <shaleen@jain.sh>"]
edition = "2018"
description = "A CLI for managing Domains and DNS records on cloudflare."
license = "MIT OR Apache-2.0"
repository = "https://github.com/shalzz/flary"
readme = "README.md"
categories = ["command-line-interface"]

[dependencies]
anyhow = "1.0.26"
base64 = "0.21"
chrono = "0.4"
config = "0.10.1"
clap = "2.33.0"
cloudflare = "0.14.0"
dirs = "1.0.5"
env_logger = "0.6.1"
log = "0.4.6"
open = "5"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tempfile = "3.1.0"
toml = "0.5.5"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
nanospinner = "0.3.2"

[dev-dependencies]
tempfile = "3.1.0"
wiremock = "0.6"
serde_json = "1.0"
