[package]
name = "flary"
version = "1.0.5"
authors = ["Shaleen Jain <shaleen@jain.sh>"]
edition = "2018"
description = "A CLI for managing Domains and DNS records on cloudflare."
license = "MIT OR Apache-2.0"
repository = "https://github.com/shalzz/flary"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["cloudflare", "cli", "dns"]

[dependencies]
anyhow = "1.0.103"
base64 = "0.22"
chrono = "0.4"
config = "0.10.1"
clap = "4.6"
clap_complete = "4.6"
cloudflare = "0.14.0"
dirs = "6.0.0"
env_logger = "0.11.11"
log = "0.4.33"
open = "5"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.11"
tempfile = "3.27.0"
toml = "1.1.2"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
nanospinner = "0.3.2"

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6"
serde_json = "1.0"
